# chip15

./: Cargo.toml  README.md  index.html
src/: init_app.rs  load_assets.rs  main.rs  play_game.rs
src/play_game/: map.rs  minimap.rs  player.rs  spawn_methods.rs
src/play_game/map/: maze_a.rs  maze_b.rs
src/public/: config.rs  debug.rs  misc.rs  types.rs
wasm/: maze3d.js
