[package]
name = "maze3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11"
once_cell = "1"
counted-array = "0.1"
rand = "0.8"
regex = "1"

# WASMの場合にどれか指定する必要がある？？
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }
